bk_ida/gccida/g0/output_init_element
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_init_element/src/c-typeck.c:6693:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_init_element/src/c-typeck.c:6695:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *valueb; // [rsp+18h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_init_element/src/c-typeck.c:6696:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *bitpos; // [rsp+30h] [rbp-10h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_init_element/src/c-typeck.c:6746:29: error: expected expression
if ( valueb == ( tree_node *)global_trees ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_init_element/src/c-typeck.c:6746:18: error: use of undeclared identifier 'tree_node'
if ( valueb == ( tree_node *)global_trees ) 
                 ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_init_element/src/obj/c-typeck.o] Error 1
